--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="calculator">
             <div class="numbers">
                 <div class="grid-one">
-                    <button class="button">AC</button>
-                    <button class="button">+/-</button>
+                    <button class="btn-AC">AC</button>
+                    <button class="btn-pm">+/-</button>
                     <button class="button">%</button>
                     <button class="operator">/</button>
                 </div>
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="grid-four">
-                    <button class="button-zero">0</button>
+                    <button class="btn-zero" class = 'button'>0</button>
                     <button class="button">.</button>
                     <button class="operator">=</button>
                 </div>
