Add support for number 0
Fix the button 0 logic in the calculator

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="grid-four">
-                    <button class="btn-zero" class = 'button'>0</button>
+                    <button class="btn-zero">0</button>
                     <button class="button">.</button>
                     <button class="operator">=</button>
                 </div>
