Add error message display for divide by zero
The calculator now shows accurate message when diving by zero without crashing the calulator

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="grid-four">
                     <button class="btn-zero">0</button>
                     <button class="button">.</button>
-                    <button class="operator">=</button>
+                    <button class="btn-equals">=</button>
                 </div>
             </div>        
         </div>
