Add % button functionality
The calculator can efficiently handle the percentage calculation of the displayed value.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="grid-one">
                     <button class="btn-AC">AC</button>
                     <button class="btn-pm">+/-</button>
-                    <button class="button">%</button>
+                    <button class="btn-percentage">%</button>
                     <button class="operator">/</button>
                 </div>
 
@@ -39,9 +39,9 @@
                 </div>
 
                 <div class="grid-three">
-                    <button class="button">3</button>
-                    <button class="button">2</button>
                     <button class="button">1</button>
+                    <button class="button">2</button>
+                    <button class="button">3</button>
                     <button class="operator">+</button> 
                 </div>
 
