Add apple calculator color scheme

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <!-- <div>
+    <div>
         <h1 class="heading-text">Calculator</h1>
-    </div> -->
+    </div>
     <div class="container">
         <div class="display">
             <p class="text-dummy">0</p>
@@ -18,42 +18,43 @@
         <div class="calculator">
             <div class="numbers">
                 <div class="grid-one">
-                    <button class="btn-AC">AC</button>
-                    <button class="btn-pm">+/-</button>
-                    <button class="btn-percentage">%</button>
-                    <button class="operator">/</button>
+                    <button class="btn-AC" style="background-color: rgb(62,61,63);">C</button>
+                    <button class="btn-pm" style="background-color: rgb(62,61,63);">+/-</button>
+                    <button class="btn-percentage" style="background-color: rgb(62,61,63);">%</button>
+                    <button class="operator" style="background-color: rgb(255,158,11);">÷</button>
                 </div>
 
                 <div class="grid-two">
-                    <button class="button">7</button>
-                    <button class="button">8</button>
-                    <button class="button">9</button>
-                    <button class="operator">*</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">7</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">8</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">9</button>
+                    <button class="operator" style="background-color: rgb(255,158,11);">×</button>
                 </div>
                    
                 <div class="grid-three">
-                    <button class="button">4</button>
-                    <button class="button">5</button>
-                    <button class="button">6</button>
-                    <button class="operator">-</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">4</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">5</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">6</button>
+                    <button class="operator" style="background-color: rgb(255,158,11);">−</button>
                 </div>
 
                 <div class="grid-three">
-                    <button class="button">1</button>
-                    <button class="button">2</button>
-                    <button class="button">3</button>
-                    <button class="operator">+</button> 
+                    <button class="button" style="background-color: rgb(106,106,107);">1</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">2</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">3</button>
+                    <button class="operator" style="background-color: rgb(255,158,11);">+</button> 
                 </div>
 
                 <div class="grid-four">
-                    <button class="btn-zero">0</button>
-                    <button class="button">.</button>
-                    <button class="btn-equals">=</button>
+                    <button class="btn-zero" style="background-color: rgb(106,106,107);">0</button>
+                    <button class="button" style="background-color: rgb(106,106,107);">.</button>
+                    <button class="btn-equals" style="background-color: rgb(255,158,11);">=</button>
                 </div>
             </div>        
         </div>
        
     </div>
+    <footer class="footer-text">Made by Ekansh Gahlot</footer>
 
 
     <script src="script.js"></script>
