Add condition where multiple dots are not allowed
Only one dot is allowed in this calculator, further clicks on dot button produces no result.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <div class="grid-four">
                     <button class="btn-zero" style="background-color: rgb(106,106,107);">0</button>
-                    <button class="button" style="background-color: rgb(106,106,107);">.</button>
+                    <button class="btn-dot" style="background-color: rgb(106,106,107);">.</button>
                     <button class="btn-equals" style="background-color: rgb(255,158,11);">=</button>
                 </div>
             </div>        
